apps/truenas-gate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-gate
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - wake.home.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: wake.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas-gate
                port:
                  number: 80
